# llm-privacy-guard

./: .gitignore  LICENSE  README.md  README_zh.md  cli.py  config.example.yaml  plugin.json  plugin.py  proxy_server.py  pyproject.toml  run_adversarial.py  run_adversarial_gen2.py  setup_tools.py  show_caught.py  test_engine.py
privacy_engine/: __init__.py  config.py  detector.py  entropy.py  patterns.py  whitelist.py
scripts/: _audit_full.py  _dump_all.py  _dump_full.py  _dump_full2.py  run_adversarial_gen2.py  show_caught.py
tests/: test_functional.py  test_proxy.py  test_proxy_routing.py  test_setup_tools.py  test_unit.py
