[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "llm-privacy-guard"
version = "0.2.0"
description = "LLM 消息脱敏引擎 — 在消息发给 LLM API 之前自动替换敏感信息"
readme = "README_zh.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/lenychang/llm-privacy-guard"
Issues = "https://github.com/lenychang/llm-privacy-guard/issues"

[tool.setuptools.packages.find]
include = ["privacy_engine*"]
